# unifico

./: .gitignore  .pre-commit-config.yaml  ARTIFACT.md  Dockerfile  Dockerfile_arm  INSTALL.md  README.md  pyproject.toml  requirements.txt
common/: README.md
exploration/dynamorio_clients/register-loads-stores/: CMakeLists.txt  README.md  register_loads_stores.cpp
exploration/pin-postprocess/: plot_accesses.py
exploration/pin-tools/: README.md  run_tool.py
exploration/pin_postprocess/: plot_accesses.py
exploration/pin_tools/: makefile  run_tool.py
hardware-pressure/llvm_mca_wrapper/: extract_stats.py
layout/: Makefile  README.md  call_leaf  call_leaf.c  clobber_x86.c  fact  fact.c  frame.py  func_call_7  func_call_7.c  func_call_9  func_call_9.c  g  gdb.txt  gdb_fact  gdb_is_S  is.clang.options.md  main.c  masters_project.md  masters_student.md  npb.is.build.sh  npb.is.clang-opt-llc.sh  opt_flag_assemblies.sh  ret_call.c  test_ret_aarch64.c  two_calls.c
llvm-patches/: align_branches.diff  apply_patch_lines.sh  linux_cyclades_fix.diff
llvm_patches/: NameStringLiterals.cpp  StaticVarSections.cpp  aarch64_remove_16_regs.patch  align.patch  apply.sh  apply_patch_lines.sh  llvm_popcorn.txt  name_string_literals.patch  passes.patch  popcorn_opt.patch  total.patch
mapping/: x86_vs_ARM.tex  x86_vs_ARM_mapping.tex
migration/: .gitignore
npb/: README.md  base_run.sh  collect_bins.sh  compare_output.py  get_average_time.py  modified_run.sh  plot_overhead.py  plot_results.py  process_results.py  re_directory.sh  run.sh  run_npb.py  test.sh
npb/data/: arm.csv  (+11 more)
parsec/: process_workspace.py  run_parsec.py
register-pressure-ir/: Makefile  RegAlloc.hh
register-pressure-mir/: parse_pressure_sets.py
spec2017/: README.md  base_run.sh  lstopo_p.txt  modified_run.sh  plot_l1.sh  plot_overhead.py  plot_results.py  run.sh  run_spec.py  test_run.sh
stack-ascii-printer/: print_ascii_stack.py
stack-metadata/: Makefile
stack_ascii_printer/: print_ascii_stack.py
utilities/: README.md  cpu_topology.py  get_files.sh  install_musl.sh  lstopo.py  musl_patch_mod_compiler.diff  popcorn_commands.md  switch_cpu.py  system_topology.py  template_compile.sh
(+1680 files in other folders)
