[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
# The following are specific to UnASL.
    | llvm
    | llvm-patches
    | mapping
    | popcorn-compiler
    | var
 )/
'''

[project]
name = "Unifiqo"
version = "0.0.1"

[tool.setuptools.package-dir]
"stack_ascii_printer" = "stack_ascii_printer"

[project.scripts]
stack-ascii = "stack_ascii_printer.print_ascii_stack:__main__"
