[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
# The following are specific to UnASL.
    | llvm
    | llvm-patches
    | mapping
    | popcorn-compiler
    | var
 )/
'''

[project]
name = "Unifiqo"
version = "0.0.1"

dependencies = [
  "contourpy==1.0.7",
  "cycler==0.11.0",
  "fonttools==4.39.3",
  "kiwisolver==1.4.4",
  "matplotlib==3.7.1",
  "numpy==1.24.2",
  "packaging==23.1",
  "pandas==2.0.0",
  "Pillow==9.5.0",
  "pyparsing==3.0.9",
  "python-dateutil==2.8.2",
  "pytz==2023.3",
  "six==1.16.0",
  "tzdata==2023.3"
]

[tool.setuptools.package-dir]
"stack_ascii_printer" = "stack_ascii_printer"
"npb" = "npb/runs"

[project.scripts]
stack-ascii = "stack_ascii_printer.print_ascii_stack:__main__"
npb = "npb.npb_run:__main__"

